--- a/src/Submit.css
+++ b/src/Submit.css
@@ -1,4 +1,5 @@
 .submit-button {
+  width : 80vw;
   border : none;
   padding : 0;
   font : inherit;
