--- a/src/ValidationErrorMessage.css
+++ b/src/ValidationErrorMessage.css
@@ -1,5 +1,7 @@
 .status-error {
+  width : 80vw;
   height : 6rem;
+  font-size : 1rem;
   background-color: #ffece8;
   color : #c82000;
   padding : 0.5rem;
